force-app/main/default/objects/SLA_History__c/SLA_History__c.object-meta.xml
<CustomObject>
    <label>SLA History</label>
    <nameField>
        <displayFormat>SH-{0000}</displayFormat>
        <label>SLA History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>