force-app/main/default/objects/SLA_History__c/fields/New_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Status__c</fullName>
    <label>New Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Near Breach</fullName>
            </value>
            <value>
                <fullName>Breached</fullName>
            </value>
            <value>
                <fullName>Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>